py_completo/ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> document
Rule 1     document -> header body
Rule 2     document -> body
Rule 3     header -> header_one
Rule 4     header -> header_one header
Rule 5     header_one -> BASE IRIREF
Rule 6     header_one -> PREFIX PNAME_NS IRIREF
Rule 7     header_one -> TOP L_IDENT
Rule 8     header_one -> TOP IRIREF
Rule 9     header_one -> UNA
Rule 10    body -> section_list
Rule 11    body -> statement_list
Rule 12    section_list -> section
Rule 13    section_list -> section section_list
Rule 14    section -> annotation
Rule 15    section -> annotation statement_list
Rule 16    annotation -> RULES
Rule 17    annotation -> FACTS
Rule 18    annotation -> CONSTRAINTS
Rule 19    annotation -> QUERIES
Rule 20    statement_list -> statement
Rule 21    statement_list -> statement statement_list
Rule 22    statement -> statement_expr
Rule 23    statement -> LABEL statement_expr
Rule 24    statement_expr -> constraint
Rule 25    statement_expr -> rule
Rule 26    statement_expr -> drule
Rule 27    statement_expr -> cquery
Rule 28    statement_expr -> nquery
Rule 29    statement_expr -> fact
Rule 30    cquery -> QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
Rule 31    cquery -> QUESTION_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
Rule 32    nquery -> QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_neg END_MARK
Rule 33    nquery -> QUESTION_MARK RULE_MARK conjunction_neg END_MARK
Rule 34    rule -> conjunction_atoms RULE_MARK conjunction_atoms_or_empty END_MARK
Rule 35    drule -> START_STATEMENT_MARK conjunction_csf_list END_STATEMENT_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
Rule 36    conjunction_csf_list -> conjunction_csf
Rule 37    conjunction_csf_list -> conjunction_csf SEPARATOR conjunction_csf_list
Rule 38    conjunction_csf -> atom
Rule 39    conjunction_csf -> START_TERMS_MARK conjunction_atoms END_TERMS_MARK
Rule 40    constraint -> ABSURD_MARK RULE_MARK conjunction_atoms END_MARK
Rule 41    fact -> conjunction_atoms END_MARK
Rule 42    conjunction_neg -> neg_literal
Rule 43    conjunction_neg -> neg_literal SEPARATOR conjunction_atoms
Rule 44    conjunction_neg -> atom SEPARATOR conjunction_neg
Rule 45    conjunction_neg -> neg_literal SEPARATOR conjunction_neg
Rule 46    conjunction_atoms -> atom
Rule 47    conjunction_atoms -> atom SEPARATOR conjunction_atoms
Rule 48    conjunction_atoms_or_empty -> conjunction_atoms
Rule 49    conjunction_atoms_or_empty -> empty
Rule 50    neg_literal -> NEGATION std_atom
Rule 51    atom -> equality
Rule 52    atom -> std_atom
Rule 53    equality -> term EQUALITY_MARK term
Rule 54    std_atom -> predicate START_TERMS_MARK term_list END_TERMS_MARK
Rule 55    term_list_or_empty -> term_list
Rule 56    term_list_or_empty -> empty
Rule 57    term_list -> term
Rule 58    term_list -> term SEPARATOR term_list
Rule 59    term -> constant
Rule 60    term -> variable
Rule 61    predicate -> prefixed_name
Rule 62    predicate -> L_IDENT
Rule 63    predicate -> IRIREF
Rule 64    constant -> prefixed_name
Rule 65    constant -> L_IDENT
Rule 66    constant -> IRIREF
Rule 67    constant -> literal
Rule 68    variable -> U_IDENT
Rule 69    variable -> BLANK_NODE_LABEL
Rule 70    prefixed_name -> PNAME_LN
Rule 71    prefixed_name -> PNAME_NS
Rule 72    literal -> rdf_literal
Rule 73    literal -> numeric_literal
Rule 74    literal -> boolean_literal
Rule 75    boolean_literal -> BOOLEAN
Rule 76    rdf_literal -> STRING TOPTOP iri
Rule 77    rdf_literal -> STRING LANGTAG
Rule 78    rdf_literal -> STRING
Rule 79    numeric_literal -> INTEGER
Rule 80    numeric_literal -> DECIMAL
Rule 81    numeric_literal -> DOUBLE
Rule 82    numeric_literal -> FLOAT
Rule 83    iri -> IRIREF
Rule 84    iri -> prefixed_name
Rule 85    empty -> <empty>

Terminals, with rules where they appear

ABSURD_MARK          : 40
BASE                 : 5
BLANK_NODE_LABEL     : 69
BOOLEAN              : 75
CONSTRAINTS          : 18
DECIMAL              : 80
DOUBLE               : 81
END_MARK             : 30 31 32 33 34 35 40 41
END_STATEMENT_MARK   : 35
END_TERMS_MARK       : 30 32 39 54
EQUALITY_MARK        : 53
FACTS                : 17
FLOAT                : 82
INTEGER              : 79
IRIREF               : 5 6 8 63 66 83
LABEL                : 23
LANGTAG              : 77
L_IDENT              : 7 62 65
NEGATION             : 50
PNAME_LN             : 70
PNAME_NS             : 6 71
PREFIX               : 6
QUERIES              : 19
QUESTION_MARK        : 30 31 32 33
RULES                : 16
RULE_MARK            : 30 31 32 33 34 35 40
SEPARATOR            : 37 43 44 45 47 58
START_STATEMENT_MARK : 35
START_TERMS_MARK     : 30 32 39 54
STRING               : 76 77 78
TOP                  : 7 8
TOPTOP               : 76
UNA                  : 9
U_IDENT              : 68
error                : 

Nonterminals, with rules where they appear

annotation           : 14 15
atom                 : 38 44 46 47
body                 : 1 2
boolean_literal      : 74
conjunction_atoms    : 34 39 40 41 43 47 48
conjunction_atoms_or_empty : 30 31 34 35
conjunction_csf      : 36 37
conjunction_csf_list : 35 37
conjunction_neg      : 32 33 44 45
constant             : 59
constraint           : 24
cquery               : 27
document             : 0
drule                : 26
empty                : 49 56
equality             : 51
fact                 : 29
header               : 1 4
header_one           : 3 4
iri                  : 76
literal              : 67
neg_literal          : 42 43 45
nquery               : 28
numeric_literal      : 73
predicate            : 54
prefixed_name        : 61 64 84
rdf_literal          : 72
rule                 : 25
section              : 12 13
section_list         : 10 13
statement            : 20 21
statement_expr       : 22 23
statement_list       : 11 15 21
std_atom             : 50 52
term                 : 53 53 57 58
term_list            : 54 55 58
term_list_or_empty   : 30 32
variable             : 60

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . header body
    (2) document -> . body
    (3) header -> . header_one
    (4) header -> . header_one header
    (10) body -> . section_list
    (11) body -> . statement_list
    (5) header_one -> . BASE IRIREF
    (6) header_one -> . PREFIX PNAME_NS IRIREF
    (7) header_one -> . TOP L_IDENT
    (8) header_one -> . TOP IRIREF
    (9) header_one -> . UNA
    (12) section_list -> . section
    (13) section_list -> . section section_list
    (20) statement_list -> . statement
    (21) statement_list -> . statement statement_list
    (14) section -> . annotation
    (15) section -> . annotation statement_list
    (22) statement -> . statement_expr
    (23) statement -> . LABEL statement_expr
    (16) annotation -> . RULES
    (17) annotation -> . FACTS
    (18) annotation -> . CONSTRAINTS
    (19) annotation -> . QUERIES
    (24) statement_expr -> . constraint
    (25) statement_expr -> . rule
    (26) statement_expr -> . drule
    (27) statement_expr -> . cquery
    (28) statement_expr -> . nquery
    (29) statement_expr -> . fact
    (40) constraint -> . ABSURD_MARK RULE_MARK conjunction_atoms END_MARK
    (34) rule -> . conjunction_atoms RULE_MARK conjunction_atoms_or_empty END_MARK
    (35) drule -> . START_STATEMENT_MARK conjunction_csf_list END_STATEMENT_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (30) cquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (31) cquery -> . QUESTION_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (32) nquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_neg END_MARK
    (33) nquery -> . QUESTION_MARK RULE_MARK conjunction_neg END_MARK
    (41) fact -> . conjunction_atoms END_MARK
    (46) conjunction_atoms -> . atom
    (47) conjunction_atoms -> . atom SEPARATOR conjunction_atoms
    (51) atom -> . equality
    (52) atom -> . std_atom
    (53) equality -> . term EQUALITY_MARK term
    (54) std_atom -> . predicate START_TERMS_MARK term_list END_TERMS_MARK
    (59) term -> . constant
    (60) term -> . variable
    (61) predicate -> . prefixed_name
    (62) predicate -> . L_IDENT
    (63) predicate -> . IRIREF
    (64) constant -> . prefixed_name
    (65) constant -> . L_IDENT
    (66) constant -> . IRIREF
    (67) constant -> . literal
    (68) variable -> . U_IDENT
    (69) variable -> . BLANK_NODE_LABEL
    (70) prefixed_name -> . PNAME_LN
    (71) prefixed_name -> . PNAME_NS
    (72) literal -> . rdf_literal
    (73) literal -> . numeric_literal
    (74) literal -> . boolean_literal
    (76) rdf_literal -> . STRING TOPTOP iri
    (77) rdf_literal -> . STRING LANGTAG
    (78) rdf_literal -> . STRING
    (79) numeric_literal -> . INTEGER
    (80) numeric_literal -> . DECIMAL
    (81) numeric_literal -> . DOUBLE
    (82) numeric_literal -> . FLOAT
    (75) boolean_literal -> . BOOLEAN

    BASE            shift and go to state 7
    PREFIX          shift and go to state 9
    TOP             shift and go to state 11
    UNA             shift and go to state 13
    LABEL           shift and go to state 18
    RULES           shift and go to state 19
    FACTS           shift and go to state 20
    CONSTRAINTS     shift and go to state 21
    QUERIES         shift and go to state 22
    ABSURD_MARK     shift and go to state 29
    START_STATEMENT_MARK shift and go to state 31
    QUESTION_MARK   shift and go to state 32
    L_IDENT         shift and go to state 12
    IRIREF          shift and go to state 8
    U_IDENT         shift and go to state 42
    BLANK_NODE_LABEL shift and go to state 43
    PNAME_LN        shift and go to state 44
    PNAME_NS        shift and go to state 10
    STRING          shift and go to state 48
    INTEGER         shift and go to state 49
    DECIMAL         shift and go to state 50
    DOUBLE          shift and go to state 51
    FLOAT           shift and go to state 52
    BOOLEAN         shift and go to state 53

    document                       shift and go to state 1
    header                         shift and go to state 2
    body                           shift and go to state 3
    header_one                     shift and go to state 4
    section_list                   shift and go to state 5
    statement_list                 shift and go to state 6
    section                        shift and go to state 14
    statement                      shift and go to state 15
    annotation                     shift and go to state 16
    statement_expr                 shift and go to state 17
    constraint                     shift and go to state 23
    rule                           shift and go to state 24
    drule                          shift and go to state 25
    cquery                         shift and go to state 26
    nquery                         shift and go to state 27
    fact                           shift and go to state 28
    conjunction_atoms              shift and go to state 30
    atom                           shift and go to state 33
    equality                       shift and go to state 34
    std_atom                       shift and go to state 35
    term                           shift and go to state 36
    predicate                      shift and go to state 37
    constant                       shift and go to state 38
    variable                       shift and go to state 39
    prefixed_name                  shift and go to state 40
    literal                        shift and go to state 41
    rdf_literal                    shift and go to state 45
    numeric_literal                shift and go to state 46
    boolean_literal                shift and go to state 47

state 1

    (0) S' -> document .



state 2

    (1) document -> header . body
    (10) body -> . section_list
    (11) body -> . statement_list
    (12) section_list -> . section
    (13) section_list -> . section section_list
    (20) statement_list -> . statement
    (21) statement_list -> . statement statement_list
    (14) section -> . annotation
    (15) section -> . annotation statement_list
    (22) statement -> . statement_expr
    (23) statement -> . LABEL statement_expr
    (16) annotation -> . RULES
    (17) annotation -> . FACTS
    (18) annotation -> . CONSTRAINTS
    (19) annotation -> . QUERIES
    (24) statement_expr -> . constraint
    (25) statement_expr -> . rule
    (26) statement_expr -> . drule
    (27) statement_expr -> . cquery
    (28) statement_expr -> . nquery
    (29) statement_expr -> . fact
    (40) constraint -> . ABSURD_MARK RULE_MARK conjunction_atoms END_MARK
    (34) rule -> . conjunction_atoms RULE_MARK conjunction_atoms_or_empty END_MARK
    (35) drule -> . START_STATEMENT_MARK conjunction_csf_list END_STATEMENT_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (30) cquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (31) cquery -> . QUESTION_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (32) nquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_neg END_MARK
    (33) nquery -> . QUESTION_MARK RULE_MARK conjunction_neg END_MARK
    (41) fact -> . conjunction_atoms END_MARK
    (46) conjunction_atoms -> . atom
    (47) conjunction_atoms -> . atom SEPARATOR conjunction_atoms
    (51) atom -> . equality
    (52) atom -> . std_atom
    (53) equality -> . term EQUALITY_MARK term
    (54) std_atom -> . predicate START_TERMS_MARK term_list END_TERMS_MARK
    (59) term -> . constant
    (60) term -> . variable
    (61) predicate -> . prefixed_name
    (62) predicate -> . L_IDENT
    (63) predicate -> . IRIREF
    (64) constant -> . prefixed_name
    (65) constant -> . L_IDENT
    (66) constant -> . IRIREF
    (67) constant -> . literal
    (68) variable -> . U_IDENT
    (69) variable -> . BLANK_NODE_LABEL
    (70) prefixed_name -> . PNAME_LN
    (71) prefixed_name -> . PNAME_NS
    (72) literal -> . rdf_literal
    (73) literal -> . numeric_literal
    (74) literal -> . boolean_literal
    (76) rdf_literal -> . STRING TOPTOP iri
    (77) rdf_literal -> . STRING LANGTAG
    (78) rdf_literal -> . STRING
    (79) numeric_literal -> . INTEGER
    (80) numeric_literal -> . DECIMAL
    (81) numeric_literal -> . DOUBLE
    (82) numeric_literal -> . FLOAT
    (75) boolean_literal -> . BOOLEAN

    LABEL           shift and go to state 18
    RULES           shift and go to state 19
    FACTS           shift and go to state 20
    CONSTRAINTS     shift and go to state 21
    QUERIES         shift and go to state 22
    ABSURD_MARK     shift and go to state 29
    START_STATEMENT_MARK shift and go to state 31
    QUESTION_MARK   shift and go to state 32
    L_IDENT         shift and go to state 12
    IRIREF          shift and go to state 8
    U_IDENT         shift and go to state 42
    BLANK_NODE_LABEL shift and go to state 43
    PNAME_LN        shift and go to state 44
    PNAME_NS        shift and go to state 10
    STRING          shift and go to state 48
    INTEGER         shift and go to state 49
    DECIMAL         shift and go to state 50
    DOUBLE          shift and go to state 51
    FLOAT           shift and go to state 52
    BOOLEAN         shift and go to state 53

    body                           shift and go to state 54
    section_list                   shift and go to state 5
    statement_list                 shift and go to state 6
    section                        shift and go to state 14
    statement                      shift and go to state 15
    annotation                     shift and go to state 16
    statement_expr                 shift and go to state 17
    constraint                     shift and go to state 23
    rule                           shift and go to state 24
    drule                          shift and go to state 25
    cquery                         shift and go to state 26
    nquery                         shift and go to state 27
    fact                           shift and go to state 28
    conjunction_atoms              shift and go to state 30
    atom                           shift and go to state 33
    equality                       shift and go to state 34
    std_atom                       shift and go to state 35
    term                           shift and go to state 36
    predicate                      shift and go to state 37
    constant                       shift and go to state 38
    variable                       shift and go to state 39
    prefixed_name                  shift and go to state 40
    literal                        shift and go to state 41
    rdf_literal                    shift and go to state 45
    numeric_literal                shift and go to state 46
    boolean_literal                shift and go to state 47

state 3

    (2) document -> body .

    $end            reduce using rule 2 (document -> body .)


state 4

    (3) header -> header_one .
    (4) header -> header_one . header
    (3) header -> . header_one
    (4) header -> . header_one header
    (5) header_one -> . BASE IRIREF
    (6) header_one -> . PREFIX PNAME_NS IRIREF
    (7) header_one -> . TOP L_IDENT
    (8) header_one -> . TOP IRIREF
    (9) header_one -> . UNA

    LABEL           reduce using rule 3 (header -> header_one .)
    RULES           reduce using rule 3 (header -> header_one .)
    FACTS           reduce using rule 3 (header -> header_one .)
    CONSTRAINTS     reduce using rule 3 (header -> header_one .)
    QUERIES         reduce using rule 3 (header -> header_one .)
    ABSURD_MARK     reduce using rule 3 (header -> header_one .)
    START_STATEMENT_MARK reduce using rule 3 (header -> header_one .)
    QUESTION_MARK   reduce using rule 3 (header -> header_one .)
    L_IDENT         reduce using rule 3 (header -> header_one .)
    IRIREF          reduce using rule 3 (header -> header_one .)
    U_IDENT         reduce using rule 3 (header -> header_one .)
    BLANK_NODE_LABEL reduce using rule 3 (header -> header_one .)
    PNAME_LN        reduce using rule 3 (header -> header_one .)
    PNAME_NS        reduce using rule 3 (header -> header_one .)
    STRING          reduce using rule 3 (header -> header_one .)
    INTEGER         reduce using rule 3 (header -> header_one .)
    DECIMAL         reduce using rule 3 (header -> header_one .)
    DOUBLE          reduce using rule 3 (header -> header_one .)
    FLOAT           reduce using rule 3 (header -> header_one .)
    BOOLEAN         reduce using rule 3 (header -> header_one .)
    BASE            shift and go to state 7
    PREFIX          shift and go to state 9
    TOP             shift and go to state 11
    UNA             shift and go to state 13

    header_one                     shift and go to state 4
    header                         shift and go to state 55

state 5

    (10) body -> section_list .

    $end            reduce using rule 10 (body -> section_list .)


state 6

    (11) body -> statement_list .

    $end            reduce using rule 11 (body -> statement_list .)


state 7

    (5) header_one -> BASE . IRIREF

    IRIREF          shift and go to state 56


state 8

    (63) predicate -> IRIREF .
    (66) constant -> IRIREF .

    START_TERMS_MARK reduce using rule 63 (predicate -> IRIREF .)
    EQUALITY_MARK   reduce using rule 66 (constant -> IRIREF .)


state 9

    (6) header_one -> PREFIX . PNAME_NS IRIREF

    PNAME_NS        shift and go to state 57


state 10

    (71) prefixed_name -> PNAME_NS .

    START_TERMS_MARK reduce using rule 71 (prefixed_name -> PNAME_NS .)
    EQUALITY_MARK   reduce using rule 71 (prefixed_name -> PNAME_NS .)
    SEPARATOR       reduce using rule 71 (prefixed_name -> PNAME_NS .)
    END_TERMS_MARK  reduce using rule 71 (prefixed_name -> PNAME_NS .)
    RULE_MARK       reduce using rule 71 (prefixed_name -> PNAME_NS .)
    END_MARK        reduce using rule 71 (prefixed_name -> PNAME_NS .)
    END_STATEMENT_MARK reduce using rule 71 (prefixed_name -> PNAME_NS .)


state 11

    (7) header_one -> TOP . L_IDENT
    (8) header_one -> TOP . IRIREF

    L_IDENT         shift and go to state 58
    IRIREF          shift and go to state 59


state 12

    (62) predicate -> L_IDENT .
    (65) constant -> L_IDENT .

    START_TERMS_MARK reduce using rule 62 (predicate -> L_IDENT .)
    EQUALITY_MARK   reduce using rule 65 (constant -> L_IDENT .)


state 13

    (9) header_one -> UNA .

    BASE            reduce using rule 9 (header_one -> UNA .)
    PREFIX          reduce using rule 9 (header_one -> UNA .)
    TOP             reduce using rule 9 (header_one -> UNA .)
    UNA             reduce using rule 9 (header_one -> UNA .)
    LABEL           reduce using rule 9 (header_one -> UNA .)
    RULES           reduce using rule 9 (header_one -> UNA .)
    FACTS           reduce using rule 9 (header_one -> UNA .)
    CONSTRAINTS     reduce using rule 9 (header_one -> UNA .)
    QUERIES         reduce using rule 9 (header_one -> UNA .)
    ABSURD_MARK     reduce using rule 9 (header_one -> UNA .)
    START_STATEMENT_MARK reduce using rule 9 (header_one -> UNA .)
    QUESTION_MARK   reduce using rule 9 (header_one -> UNA .)
    L_IDENT         reduce using rule 9 (header_one -> UNA .)
    IRIREF          reduce using rule 9 (header_one -> UNA .)
    U_IDENT         reduce using rule 9 (header_one -> UNA .)
    BLANK_NODE_LABEL reduce using rule 9 (header_one -> UNA .)
    PNAME_LN        reduce using rule 9 (header_one -> UNA .)
    PNAME_NS        reduce using rule 9 (header_one -> UNA .)
    STRING          reduce using rule 9 (header_one -> UNA .)
    INTEGER         reduce using rule 9 (header_one -> UNA .)
    DECIMAL         reduce using rule 9 (header_one -> UNA .)
    DOUBLE          reduce using rule 9 (header_one -> UNA .)
    FLOAT           reduce using rule 9 (header_one -> UNA .)
    BOOLEAN         reduce using rule 9 (header_one -> UNA .)


state 14

    (12) section_list -> section .
    (13) section_list -> section . section_list
    (12) section_list -> . section
    (13) section_list -> . section section_list
    (14) section -> . annotation
    (15) section -> . annotation statement_list
    (16) annotation -> . RULES
    (17) annotation -> . FACTS
    (18) annotation -> . CONSTRAINTS
    (19) annotation -> . QUERIES

    $end            reduce using rule 12 (section_list -> section .)
    RULES           shift and go to state 19
    FACTS           shift and go to state 20
    CONSTRAINTS     shift and go to state 21
    QUERIES         shift and go to state 22

    section                        shift and go to state 14
    section_list                   shift and go to state 60
    annotation                     shift and go to state 16

state 15

    (20) statement_list -> statement .
    (21) statement_list -> statement . statement_list
    (20) statement_list -> . statement
    (21) statement_list -> . statement statement_list
    (22) statement -> . statement_expr
    (23) statement -> . LABEL statement_expr
    (24) statement_expr -> . constraint
    (25) statement_expr -> . rule
    (26) statement_expr -> . drule
    (27) statement_expr -> . cquery
    (28) statement_expr -> . nquery
    (29) statement_expr -> . fact
    (40) constraint -> . ABSURD_MARK RULE_MARK conjunction_atoms END_MARK
    (34) rule -> . conjunction_atoms RULE_MARK conjunction_atoms_or_empty END_MARK
    (35) drule -> . START_STATEMENT_MARK conjunction_csf_list END_STATEMENT_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (30) cquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (31) cquery -> . QUESTION_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (32) nquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_neg END_MARK
    (33) nquery -> . QUESTION_MARK RULE_MARK conjunction_neg END_MARK
    (41) fact -> . conjunction_atoms END_MARK
    (46) conjunction_atoms -> . atom
    (47) conjunction_atoms -> . atom SEPARATOR conjunction_atoms
    (51) atom -> . equality
    (52) atom -> . std_atom
    (53) equality -> . term EQUALITY_MARK term
    (54) std_atom -> . predicate START_TERMS_MARK term_list END_TERMS_MARK
    (59) term -> . constant
    (60) term -> . variable
    (61) predicate -> . prefixed_name
    (62) predicate -> . L_IDENT
    (63) predicate -> . IRIREF
    (64) constant -> . prefixed_name
    (65) constant -> . L_IDENT
    (66) constant -> . IRIREF
    (67) constant -> . literal
    (68) variable -> . U_IDENT
    (69) variable -> . BLANK_NODE_LABEL
    (70) prefixed_name -> . PNAME_LN
    (71) prefixed_name -> . PNAME_NS
    (72) literal -> . rdf_literal
    (73) literal -> . numeric_literal
    (74) literal -> . boolean_literal
    (76) rdf_literal -> . STRING TOPTOP iri
    (77) rdf_literal -> . STRING LANGTAG
    (78) rdf_literal -> . STRING
    (79) numeric_literal -> . INTEGER
    (80) numeric_literal -> . DECIMAL
    (81) numeric_literal -> . DOUBLE
    (82) numeric_literal -> . FLOAT
    (75) boolean_literal -> . BOOLEAN

    $end            reduce using rule 20 (statement_list -> statement .)
    RULES           reduce using rule 20 (statement_list -> statement .)
    FACTS           reduce using rule 20 (statement_list -> statement .)
    CONSTRAINTS     reduce using rule 20 (statement_list -> statement .)
    QUERIES         reduce using rule 20 (statement_list -> statement .)
    LABEL           shift and go to state 18
    ABSURD_MARK     shift and go to state 29
    START_STATEMENT_MARK shift and go to state 31
    QUESTION_MARK   shift and go to state 32
    L_IDENT         shift and go to state 12
    IRIREF          shift and go to state 8
    U_IDENT         shift and go to state 42
    BLANK_NODE_LABEL shift and go to state 43
    PNAME_LN        shift and go to state 44
    PNAME_NS        shift and go to state 10
    STRING          shift and go to state 48
    INTEGER         shift and go to state 49
    DECIMAL         shift and go to state 50
    DOUBLE          shift and go to state 51
    FLOAT           shift and go to state 52
    BOOLEAN         shift and go to state 53

    statement                      shift and go to state 15
    statement_list                 shift and go to state 61
    statement_expr                 shift and go to state 17
    constraint                     shift and go to state 23
    rule                           shift and go to state 24
    drule                          shift and go to state 25
    cquery                         shift and go to state 26
    nquery                         shift and go to state 27
    fact                           shift and go to state 28
    conjunction_atoms              shift and go to state 30
    atom                           shift and go to state 33
    equality                       shift and go to state 34
    std_atom                       shift and go to state 35
    term                           shift and go to state 36
    predicate                      shift and go to state 37
    constant                       shift and go to state 38
    variable                       shift and go to state 39
    prefixed_name                  shift and go to state 40
    literal                        shift and go to state 41
    rdf_literal                    shift and go to state 45
    numeric_literal                shift and go to state 46
    boolean_literal                shift and go to state 47

state 16

    (14) section -> annotation .
    (15) section -> annotation . statement_list
    (20) statement_list -> . statement
    (21) statement_list -> . statement statement_list
    (22) statement -> . statement_expr
    (23) statement -> . LABEL statement_expr
    (24) statement_expr -> . constraint
    (25) statement_expr -> . rule
    (26) statement_expr -> . drule
    (27) statement_expr -> . cquery
    (28) statement_expr -> . nquery
    (29) statement_expr -> . fact
    (40) constraint -> . ABSURD_MARK RULE_MARK conjunction_atoms END_MARK
    (34) rule -> . conjunction_atoms RULE_MARK conjunction_atoms_or_empty END_MARK
    (35) drule -> . START_STATEMENT_MARK conjunction_csf_list END_STATEMENT_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (30) cquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (31) cquery -> . QUESTION_MARK RULE_MARK conjunction_atoms_or_empty END_MARK
    (32) nquery -> . QUESTION_MARK START_TERMS_MARK term_list_or_empty END_TERMS_MARK RULE_MARK conjunction_neg END_MARK
    (33) nquery -> . QUESTION_MARK RULE_MARK conjunction_neg END_MARK
    (41) fact -> . conjunction_atoms END_MARK
    (46) conjunction_atoms -> . atom
    (47) conjunction_atoms -> . atom SEPARATOR conjunction_atoms
    (51) atom -> . equality
    (52) atom -> . std_atom
    (53) equality -> . term EQUALITY_MARK term
    (54) std_atom -> . predicate START_TERMS_MARK term_list END_TERMS_MARK
    (59) term -> . constant
    (60) term -> . variable
    (61) predicate -> . prefixed_name
    (62) predicate -> . L_IDENT
    (63) predicate -> . IRIREF
    (64) constant -> . prefixed_name
    (65) constant -> . L_IDENT
    (66) constant -> . IRIREF
    (67) constant -> . literal
    (68) variable -> . U_IDENT
    (69) variable -> . BLANK_NODE_LABEL
    (70) prefixed_name -> . PNAME_LN
    (71) prefixed_name -> . PNAME_NS
    (72) literal -> . rdf_literal
    (73) literal -> . numeric_literal
    (74) literal -> . boolean_literal
    (76) rdf_literal -> . STRING TOPTOP iri
    (77) rdf_literal -> . STRING LANGTAG
    (78) rdf_literal -> . STRING
    (79) numeric_literal -> . INTEGER
    (80) numeric_literal -> . DECIMAL
    (81) numeric_literal -> . DOUBLE
    (82) numeric_literal -> . FLOAT
    (75) boolean_literal -> . BOOLEAN

    RULES           reduce using rule 14 (section -> annotation .)
    FACTS           reduce using rule 14 (section -> annotation .)
    CONSTRAINTS     reduce using rule 14 (section -> annotation .)
    QUERIES         reduce using rule 14 (section -> annotation .)
    $end            reduce using rule 14 (section -> annotation .)
    LABEL           shift and go to state 18
    ABSURD_MARK     shift and go to state 29
    START_STATEMENT_MARK shift and go to state 31
    QUESTION_MARK   shift and go to state 32
    L_IDENT         shift and go to state 12
    IRIREF          shift and go to state 8
    U_IDENT         shift and go to state 42
    BLANK_NODE_LABEL shift and go to state 43
    PNAME_LN        shift and go to state 44
    PNAME_NS        shift and go to state 10
    STRING          shift and go to state 48
    INTEGER         shift and go to state 49
    DECIMAL         shift and go to state 50
    DOUBLE          shift and go to state 51
    FLOAT           shift and go to state 52
    BOOLEAN         shift and go to state 53

    statement_list                 shift and go to state 62
    statement                      shift and go to state 15
    statement_expr                 shift and go to state 17
    constraint                     shift and go to state 23
    rule                           shift and go to state 24
    drule                          shift and go to state 25
    cquery                         shift and go to state 26
    nquery                         shift and go to state 27
    fact                           shift and go to state 28
    conjunction_atoms              shift and go to state 30
    atom                           shift and go to state 33
    equality                       shift and go to state 34
    std_atom                       shift and go to state 35
    term                           shift and go to state 36
    predicate                      shift and go to state 37
    constant                       shift and go to state 38
    variable                       shift and go to state 39
    prefixed_name                  shift and go to state 40
    literal                        shift and go to state 41
    rdf_literal                    shift and go to state 45
    numeric_literal                shift and go to state 46
    boolean_literal                shift and go to state 47

state 17

    (22) statement -> statement_expr .

    LABEL           reduce using rule 22 (statement -> statement_expr .)
    ABSURD_MARK     reduce using rule 22 (statement -> statement_expr .)
    START_STATEMENT_MARK reduce using rule 22 (statement -> statement_expr .)
    QUESTION_MARK   reduce using rule 22 (statement -> statement_expr .)
    L_IDENT         reduce using rule 22 (statement -> statement_expr .)
    IRIREF          reduce using rule 22 (statement -> statement_expr .)
    U_IDENT         reduce using rule 22 (statement -> statement_expr .)
    BLANK_NODE_LABEL reduce using rule 22 (statement -> statement_expr .)
    PNAME_LN        reduce using rule 22 (statement -> statement_expr .)
    PNAME_NS        reduce using rule 22 (statement -> statement_expr .)
    STRING          reduce using rule 22 (statement -> statement_expr .)
    INTEGER         reduce using rule 22 (statement -> statement_expr .)
    DECIMAL         reduce using rule 22 (statement -> statement_expr .)
    DOUBLE          reduce using rule 22 (statement -> statement_expr .)
    FLOAT           reduce using rule 22 (statement -> statement_expr .)
    BOOLEAN         reduce using rule 22 (statement -> statement_expr .)
    $end            reduce using rule 22 (statement -> statement_expr .)
    RULES           reduce using rule 22 (statement -> statement_expr .)
    FACTS           reduce using rule 22 (statement -> statement_expr .)
    CONSTRAINTS     reduce using rule 22 (statement -> statement_expr .)
    QUERIES         reduce using rule 22 (statement -> statement_expr .)


state 18
